@@ -93,6 +93,8 @@
       <menuitem name="adjust_durations" action="adjust_durations"/>
       <menuitem name="convert_framerate" action="convert_framerate"/>
       <separator/>
+      <menuitem name="configure_spell_check" action="configure_spell_check"/>
+      <separator/>
       <menuitem name="append_file" action="append_file"/>
       <menuitem name="split_project" action="split_project"/>
     </menu>
