@@ -19,18 +19,19 @@
 """Extension delegates of application."""
 
 
-from .close    import CloseAgent
-from .edit     import EditAgent
-from .format   import FormatAgent
-from .help     import HelpAgent
-from .menu     import MenuAgent
-from .open     import OpenAgent
-from .position import PositionAgent
-from .preview  import PreviewAgent
-from .save     import SaveAgent
-from .search   import SearchAgent
-from .update   import UpdateAgent
-from .view     import ViewAgent
+from .close      import CloseAgent
+from .edit       import EditAgent
+from .format     import FormatAgent
+from .help       import HelpAgent
+from .menu       import MenuAgent
+from .open       import OpenAgent
+from .position   import PositionAgent
+from .preview    import PreviewAgent
+from .save       import SaveAgent
+from .search     import SearchAgent
+from .spellcheck import SpellCheckAgent
+from .update     import UpdateAgent
+from .view       import ViewAgent
 
 
 __all__ = AGENTS = [
@@ -44,5 +45,6 @@ __all__ = AGENTS = [
     "PreviewAgent",
     "SaveAgent",
     "SearchAgent",
+    "SpellCheckAgent",
     "UpdateAgent",
     "ViewAgent",]
